[gd_scene load_steps=6 format=2]

[ext_resource path="res://files-godot-project/assets-do-curso-pong-na-godot-4-main/arquivos/assets/sprites/bola.png" type="Texture" id=1]
[ext_resource path="res://scenes/ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://files-godot-project/assets-do-curso-pong-na-godot-4-main/arquivos/assets/sons/impacto-barreira.wav" type="AudioStream" id=3]
[ext_resource path="res://files-godot-project/assets-do-curso-pong-na-godot-4-main/arquivos/assets/sons/impacto-jogador.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Ball" type="Area2D"]
position = Vector2( 368, 259 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="impactBorder" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ImpactPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
